adding back to home for every html and deleting some not need file

--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -10,3 +10,5 @@
 <p>This anime is escort me from a child.</p>
 <h3>Sword Art Online</h3>
 <p>I think this is the first anime in there's genre.</p>
+
+<a href="../index.html">Back to Home</a>
