fixing birthday invitation link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       height="200"
       alt="screenshots of movie-ranking page"
     />
-    <h3><a>Birthday Invitation Project</a></h3>
+    <h3>
+      <a href="./public/birthday-invite.html">Birthday Invitation Project</a>
+    </h3>
     <img
       src="./assets/images/birthday-invite.png"
       height="200"
