--- a/public/contact.html
+++ b/public/contact.html
@@ -1,7 +1,16 @@
 <h1>Contact Me</h1>
-<p>Tel: <a href="https://wa.me/6281249681830">+62 81249681830</a></p>
 <p>
-  Email: <a href="mailto:rachmadsyarifh@gmail.com">rachmadsyarifh@gmail.com</a>
+  Tel:
+  <a
+    href="https://wa.me/6281249681830"
+    target="_blank"
+    rel="noopener noreferrer"
+    >+62 81249681830</a
+  >
+</p>
+<p>
+  Email:
+  <a href="mailto:rachmadsyarifh@gmail.com">rachmadsyarifh@gmail.com</a>
 </p>
 <p>Address:</p>
 <p>
